fix: resolve popup layout issue in Firefox and layout issue on mobile

--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body {
     width: 100vw;
     min-width: 100%;
     height: 100vh;
+    height: 100dvh;
     min-height: 100%;
     background-color: var(--background-body);
     color: var(--text);
